# libosmium

./: .clang-tidy  .gitignore  .npmignore  .travis.yml  .ycm_extra_conf.py  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Makefile  NOTES_FOR_DEVELOPERS  NOTES_FOR_DEVELOPERS.md  README-changes-from-old-osmium  README-opl-format  README.md  appveyor.yml  binding.gyp  build-appveyor.bat  build-msys2.bat  common.gypi  get_options.sh  libosmium.diff  make_osmium_project.sh  osmium.imp  package.json
benchmarks/: CMakeLists.txt  README.md  download_data.sh  osmium_benchmark_count.cpp  osmium_benchmark_count_tag.cpp  osmium_benchmark_mercator.cpp  osmium_benchmark_proj_geojson.cpp  osmium_benchmark_static_vs_dynamic_index.cpp  osmium_benchmark_write_pbf.cpp  run_benchmark_count.sh  run_benchmark_index_map.sh  run_benchmark_proj_geojson.sh  setup.sh
examples/: .gitignore  CMakeLists.txt  Makefile  README.md  osmium_amenity_list.cpp  osmium_area_test.cpp  osmium_change_tags.cpp  osmium_convert.cpp  osmium_convertn.cpp  osmium_count.cpp  osmium_create_node_cache.cpp  osmium_create_pois.cpp  osmium_debug.cpp  osmium_dump_internal.cpp  osmium_filter_discussions.cpp  osmium_index.cpp  osmium_index_lookup.cpp  osmium_location_cache_create.cpp  osmium_location_cache_use.cpp  osmium_mpdump.cpp  osmium_pub_names.cpp  osmium_read.cpp  osmium_read_pbf_randomaccess.cpp  osmium_read_with_progress.cpp  osmium_readn.cpp  osmium_road_length.cpp  osmium_serdump.cpp  osmium_tags_filter.cpp  osmium_tiles.cpp  osmium_toogr.cpp  osmium_toogr2.cpp  osmium_toogr2_exp.cpp  osmium_use_node_cache.cpp
include/: CMakeLists.txt  gdalcpp.hpp  mmap_for_windows.hpp  pbf_reader.hpp  pbf_writer.hpp
include/osmium/: diff_handler.hpp  diff_iterator.hpp  diff_visitor.hpp  dynamic_handler.hpp  fwd.hpp  handler.hpp  object_pointer_collection.hpp  opl.hpp  osm.hpp  version.hpp  visitor.hpp
include/osmium/area/: assembler.hpp  assembler_config.hpp  assembler_legacy.hpp  basic_assembler.hpp  collector.hpp  geom_assembler.hpp  multipolygon_collector.hpp  multipolygon_manager.hpp  multipolygon_manager_legacy.hpp  problem.hpp  problem_reporter.hpp  problem_reporter_collector.hpp  problem_reporter_exception.hpp  problem_reporter_ogr.hpp  problem_reporter_stream.hpp  segment.hpp  stats.hpp
include/osmium/builder/: attr.hpp  builder.hpp  builder_helper.hpp  osm_object_builder.hpp
include/osmium/detail/: mmap_vector_anon.hpp  mmap_vector_base.hpp  mmap_vector_file.hpp  tmpfile.hpp  typed_mmap.hpp
include/osmium/experimental/: flex_reader.hpp
include/osmium/geom/: coordinates.hpp  factory.hpp  geojson.hpp  geos.hpp  haversine.hpp  mercator_projection.hpp  ogr.hpp  projection.hpp  rapid_geojson.hpp  rapid_geojson_document.hpp  relations.hpp  tile.hpp  util.hpp  wkb.hpp  wkt.hpp
include/osmium/handler/: chain.hpp  check_order.hpp  coordinates_for_ways.hpp  disk_store.hpp  dump.hpp  node_locations_for_ways.hpp  object_relations.hpp
include/osmium/index/: id_set.hpp  index.hpp  map.hpp  multimap.hpp  node_locations_map.hpp  nwr_array.hpp  relations_map.hpp
include/osmium/io/: any_compression.hpp  any_input.hpp  any_output.hpp  bzip2_compression.hpp  compression.hpp  debug_output.hpp  encoding.hpp  error.hpp  file.hpp  file_compression.hpp  file_format.hpp  file_type.hpp  gzip_compression.hpp  header.hpp  ids_output.hpp  input.hpp  input_iterator.hpp  meta.hpp  metadata_options.hpp  o5m_input.hpp  opl_input.hpp  opl_output.hpp  output.hpp  output_iterator.hpp  overwrite.hpp  pbf.hpp  pbf_input.hpp  pbf_input_new.hpp  pbf_input_randomaccess.hpp  pbf_output.hpp  pbf_output_new.hpp  pbf_stringtable.hpp  reader.hpp  reader_iterator.hpp  reader_with_progress_bar.hpp  utils.hpp  writer.hpp  writer_options.hpp  xml_input.hpp  xml_output.hpp
include/osmium/memory/: buffer.hpp  builder.hpp  callback_buffer.hpp  collection.hpp  item.hpp  item_iterator.hpp  item_type.hpp  iterator.hpp
include/osmium/osm/: area.hpp  bbox.hpp  bounds.hpp  box.hpp  builder.hpp  changeset.hpp  crc.hpp  crc_zlib.hpp  diff_object.hpp  dump.hpp  entity.hpp  entity_bits.hpp  entity_flags.hpp  item_type.hpp  item_type_ostream.hpp  location.hpp  metadata_options.hpp  node.hpp  node_ref.hpp  node_ref_list.hpp  noderef.hpp  object.hpp  object_comparisons.hpp  object_pointer_collection.hpp  ostream.hpp  relation.hpp  segment.hpp  tag.hpp  timestamp.hpp  types.hpp  types_from_string.hpp  undirected_segment.hpp  visitor.hpp  way.hpp
include/osmium/relations/: collector.hpp  generic_relations_manager.hpp  manager_util.hpp  members_database.hpp  relations_database.hpp  relations_manager.hpp
include/osmium/storage/: item_stash.hpp
include/osmium/tags/: filter.hpp  key_filter.hpp  key_value_filter.hpp  matcher.hpp  regex_filter.hpp  taglist.hpp  tags_filter.hpp
include/protozero/: byteswap.hpp  exception.hpp  iterators.hpp  pbf_builder.hpp  pbf_reader.hpp  pbf_writer.hpp  varint.hpp  version.hpp
test/: .gitignore  CMakeLists.txt  apply.test.js  basic.test.js  buffer.test.js  changesets.test.js  coordinates.test.js  file.test.js  geojson.test.js  handler.test.js  location_handler.test.js  osm-objects.test.js  osm_object_creation.test.js  osmium.test.js  reader.test.js  run_tests.sh  test.reader.js  test_main.cpp  test_utils.cpp  test_utils.hpp
test/catch/: catch.hpp
test/data/: 64bit_ids.osm  README  changesets.osm  coordinates-problems.osm  missing-node.osm  multipolygon_testcases.osm  tag_lengths.osm  username.osm  ways_with_zero_or_one_nodes.osm  winthrop.osm  winthrop.osm.ser
test/data-tests/: CMakeLists.txt  multipolygon.qgs  testdata-multipolygon.cpp  testdata-overview.cpp  testdata-testcases.cpp  testdata-xml.cpp
test/include/: catch.hpp
test/mp/: .gitignore  Makefile  mp_test.cpp  mp_test.qgs
test/osm-testdata/: .gitignore  CMakeLists.txt  Makefile  README.md  check_basics_handler.hpp  check_wkt_handler.hpp  compare.sql  count_objects_handler.hpp  multipolygon-should.wkt  multipolygon.qgs  run-testdata-multipolygon.bat  runtests.cpp  testdata-multipolygon.cpp  testdata-overview.cpp  testdata-testcases.cpp  testdata-xml.cpp
(+355 files in other folders)
